# EQ-R

./: .gitignore  README.md
conda/: README.adoc  build-generic.sh  conda-build.sh  conda-install.sh  helpers.zsh  install-R.sh  install-RInside.R  meta-template.yaml  pkgs-R.yaml  pkgs-libstdcxx.yaml  pkgs-tk.yaml  test-eqr.tcl  upload.sh
conda/linux-64/: build.sh  conda-platform.sh
conda/linux-aarch64/: conda-platform.sh
conda/osx-64/: build.sh  conda-platform.sh
conda/osx-arm64/: build.sh  conda-platform.sh  deps.sh
src/: .gitignore  BlockingQueue.h  EQR.cpp  EQR.h  Makefile.in  Readme.rst  configure.ac  reference.mk  settings.mk.in  settings.template.sh
tests/: conda-build.sh
tests/noop/: .gitignore
tests/noop/R/: algorithm.R  fail.R
tests/noop/swift/: run-summit.sh  run-theta.sh  run.sh  run_fail.sh  workflow.swift
